ensure min-height of content-container to align footer to the viewport bottom

--- a/docroot/fsfw.css
+++ b/docroot/fsfw.css
@@ -60,6 +60,7 @@ nav {
     background: white;
     box-shadow: 0 0 3px #CCC; /* NOTE: does not work for the top edge because of z-index; see #banner above for fix */
     width: 100%;
+    min-height: 3rem;
     z-index: 1;
     position: relative; /* fallback for clients without position:sticky support */
     position: sticky;   /* only supported in Firefox ATM, see http://caniuse.com/#feat=css-sticky */
@@ -267,6 +268,7 @@ a#facebook-note:focus, a#facebook-note:hover, a#facebook-note:active {
     display: block;
     margin: 0 auto;
     max-width: 960px;
+    min-height: calc(100vh - 160px - 6rem); /* viewport height minus banner, <nav>, <footer> */
     box-sizing: border-box;
     background: white;
     box-shadow: 0 0 3px #CCC;
@@ -434,6 +436,7 @@ p.conclusion {
 }
 
 footer {
+    min-height: 3rem;
     background: #E8E8E8;
     padding: 0.5rem 1rem;
     box-sizing: border-box;
